--- a/app/src/main/res/layout/activity_math_quiz.xml
+++ b/app/src/main/res/layout/activity_math_quiz.xml
@@ -11,24 +11,60 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.washington.cathej.quizdroid.MathQuizActivity">
 
-    <TextView
-        android:id="@+id/question"
+    <LinearLayout
+        android:id="@+id/overview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1. Which one is the quadratic equation?"
-        android:textSize="25dp"/>
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="25dp" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Math"
+            android:textSize="20dp"/>
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="This topic centers around the magical world of math and the wonderous things you can learn from it"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
+
+        <TextView
+            android:id="@+id/count"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Number of questions: 2"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
+
+        <Button
+            android:id="@+id/begin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Begin!"/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/questionpage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
+        <TextView
+            android:id="@+id/question"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Which one is the quadratic equation?"
+            android:textSize="25dp"/>
         <Space
             android:layout_width="match_parent"
-            android:layout_height="20dp" />
+            android:layout_height="25dp" />
         <RadioGroup
             android:id="@+id/options"
             android:layout_width="match_parent"
@@ -36,6 +72,7 @@
             android:orientation="vertical">
         </RadioGroup>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/answerpage"
         android:layout_width="match_parent"
@@ -61,6 +98,7 @@
             android:text="You have 1 out of 1 correct"
             android:textSize="20dp"/>
     </LinearLayout>
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="20dp" />
@@ -69,7 +107,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Submit"
-        android:id="@+id/submit" />
+        android:id="@+id/submit"
+        android:visibility="gone"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
