--- a/app/src/main/res/layout/activity_math_quiz.xml
+++ b/app/src/main/res/layout/activity_math_quiz.xml
@@ -16,88 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Math"
-            android:textSize="20dp"/>
 
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="This topic centers around the magical world of math and the wonderous things you can learn from it"/>
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="10dp" />
-
-        <TextView
-            android:id="@+id/count"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Number of questions: 2"/>
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="10dp" />
-
-        <Button
-            android:id="@+id/begin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Begin!"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/questionpage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
-        <TextView
-            android:id="@+id/question"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Which one is the quadratic equation?"
-            android:textSize="25dp"/>
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="25dp" />
-        <RadioGroup
-            android:id="@+id/options"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-        </RadioGroup>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/answerpage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
-        <TextView
-            android:id="@+id/yanswer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Your answer: "
-            android:textSize="20dp"/>
-        <TextView
-            android:id="@+id/manswer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="My answer: "
-            android:textSize="20dp"/>
-        <TextView
-            android:id="@+id/total"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="You have 1 out of 1 correct"
-            android:textSize="20dp"/>
-    </LinearLayout>
 
     <Space
         android:layout_width="match_parent"
@@ -121,4 +42,9 @@
         android:text="Finish"
         android:id="@+id/finish"
         android:visibility="gone" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Begin!"
+        android:id="@+id/button" />
 </LinearLayout>
