--- a/app/src/main/res/menu/menu_math_overview.xml
+++ b/app/src/main/res/menu/menu_math_overview.xml
@@ -6,4 +6,9 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings" />
+    <item
+        android:id="@+id/action_preferences"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Preferences" />
 </menu>
